06-services/06-06-docs-packages-npm-api-client-fetch/overlays/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ladesa-ro-docs-packages-npm-api-client-fetch
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: ladesa-registry-pull-secret
      containers:
        - name: ladesa-ro-docs-packages-npm-api-client-fetch
          image: "registry.ladesa.com.br/docs-npm-api-client-fetch:development"
